--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
     <fieldset>
         <br>
-        <form action="regester-user.php" onsubmit="return validateSignUpForm()">
+        <form action="register-user.php" onsubmit="return validateSignUpForm()">
             <h3>Sign Up: </h3>
             <h4>E-mail: </h4>
             <input type="email" id="email" placeholder="Enter your E-mail" required>
